Fixed a couple more TeX errors.

--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -173,7 +173,7 @@ saturation curve of the transformer core.
   \label{tab:volt_rat}
 \end{table}
 
-\begin{table}{H}
+\begin{table}[H]
   \centering
   \begin{tabular}{cccc}
     \hline
@@ -191,7 +191,8 @@ saturation curve of the transformer core.
   \label{tab:volt_rat}
 \end{table}
 
-\[\text{Percent Difference} = \frac{measured - nameplate}{nameplate}\ \times \text{100\%}\]
+\[\text{Percent Difference} = \frac{\text{measured} -
+  \text{nameplate}}{\text{nameplate}}\ \times 100\%\]
 
 \subsection{Current Ratio}
 \begin{table}[H]
