Tiny bit more formatting.

--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -108,7 +108,7 @@ fully CCW.
 
 \label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then
 constructed. The main power switch was set ON and the voltage control knob was
-slowly adjusted to read 0.4-A from I$_2$. It was noted that the ammeter I$_2$
+slowly adjusted to read 0.4A from I$_2$. It was noted that the ammeter I$_2$
 shorted the windings 5--6.  Hence, extreme care was given to not exceed the
 secondary winding current rating of 0.5A. The values for primary voltage E$_1$,
 primary current I$_1$, and secondary current I$_2$ were then measured and
@@ -145,7 +145,7 @@ saturation curve of the transformer core.
     3--4 & 24.9 \\
     5--6 &  7.9 \\
     7--8 &  9.4 \\
-    3--7 & 12. 1\\
+    3--7 & 12.1 \\
     8--4 &  3.6 \\
     5--9 &  3.8 \\
     9--6 &  4.2 \\
