--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -45,66 +45,49 @@
 %\setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \section{Purpose of Experiment}
-In this experiment, the basic characteristics of transformers were studied.
-Various transformer circuits with different unknown turns ratios were
-constructed in order to study the different voltage ratios at each particular
-turns ratio. Other transformer circuits were constructed to observe the
-similarity between the current ratio and turns ratio, and to observe the
-saturation curve of a magnetic circuit.
+In this experiment, the non-ideal properties of a transformer were examined. The performance
+of the transformer at the Lab-Volt station was analyzed by measuring the primary and secondary
+voltages, currents, and powers. Then the transformer was subjected to an open-circuit test and 
+a short-circuit test in order to generate the equivalent circuit components. The original performance 
+specifications and the performance specifications from the two tests were then compared to show 
+the trasformer's non-ideal properties.
 
 \section{Procedure}
 \subsection{EMS Workstation Set-up}
 
 At the Lab-Volt EMS workstation, a Fluke multi-meter was used to measure the DC
-resistance of each transformer winding. These values are recorded in
+resistance of the transformer windings. These values are recorded in
 Table~\ref{tab:wind_res}.  The DAI 24V supply was turned on, and the DAI USB
 connector was connected between the EMS workstation and the {PC}. On the LVDAM
-EMS application software, the metering windows for E$_1$, E$_2$, E$_3$, I$_1$,
+EMS application software, the metering windows for E$_1$, E$_2$, I$_1$,
 and I$_2$ were opened. The metering windows were set to continuous refresh.
 
 \subsection{Transformer Performance}
 
-\label{part1} With the main power switch to OFF and the voltage control knob
-fully counterclockwise (CCW), the voltmeter selector switch was set to position
-4--N. The circuit shown in Figure~\ref{fig:circuit_01}  was then constructed.
-The main power switch was turned to ON and the voltage supply voltage was set
-to 120V. The primary voltage was recorded from E$_1$ and the secondary voltage
-was recorded from E$_2$.  The values for E$_1$ and E$_2$ were then measured and
-recorded for each winding number listed in Table~\ref{tab:volt_rat}. The main
-power switch was set to OFF and the voltage control knob was set fully CCW
-before rewiring the circuit for each winding number. The respective turns ratio
-for each set of winding number, primary, and secondary voltages was calculated
-and also listed in Table~\ref{tab:volt_rat}. After completing the requisite
-measurements, the main power switch was set OFF and the voltage control to
-fully CCW.
+\label{part1} With the main power switch set OFF and the voltage control knob fully CCW,
+the voltmeter selector switch was set to position 4-N. The circuit represented by Figure~\ref{fig:circuit_01}
+was constructed with the secondary voltmeter E$_2$ open-circuited at first to simulate an infinite load. 
+The main power supply was set ON and the supply voltage was adjusted to 120-V. The primary
+voltage E$_1$, primary current I$_1$, input power P$_1$, secondary voltage E$_2$, secondary current I$_2$, and
+output power P$_2$ were then measured for each of the four different loads listed in Table~\ref{tab:voltage_rat}.
+Prior to changing each load, the voltage supply knob was set fully CCW and the main power switch
+to OFF.
 
 \subsection{Open Circuit Test}
 
-\label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then
-constructed. The main power switch was set ON and the voltage control knob was
-slowly adjusted to read 0.4A from I$_2$. It was noted that the ammeter I$_2$
-shorted the windings 5--6.  Hence, extreme care was given to not exceed the
-secondary winding current rating of 0.5A. The values for primary voltage E$_1$,
-primary current I$_1$, and secondary current I$_2$ were then measured and
-recorded, as shown in Table~\ref{tab:short_circ}.  The main power switch was set
-OFF and the voltage control knob fully CCW.
+\label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then constructed. The main power switch
+was set ON and the voltage control knob was adjusted to 120-V. The values of the primary voltage E$_1$, primary
+current I$_1$, and input power P$_1$ were measured. These values were recorded in Table~\ref{tab:open_circ}.
+The main power switch was set OFF and the voltage control knob fully CCW.
 
 \subsection{Short Circuit Test}
 
-\label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then
-constructed. The voltage supply connection was set from 4--N to 4--5. Since the
-exciting current was small the 300$\Omega$ resistor was included and thus the
-voltage E$_3$ across the resistor was used to show the current variation. On
-the PC, the Data Table application was opened and set to record settings from
-the Options tab. E$_1$, E$_2$, and E$_3$ appeared as the columns in the data
-table. The main power switch was set ON and the supply voltage was then
-increased in 10V increments from 0--180 volts. At each increment, the Record
-Data tab was clicked to instantly enter the voltage measurements in the data
-table. After reaching 180V, the main power switch was set to OFF and the
-voltage supply control knob was fully {CCW}. On the {PC}, the Graph application
-was opened.  E$_3$ (the exciting current) was set as the x-axis, and E$_1$ (the
-applied voltage) as the y-axis. The Line Graph tab was clicked to display the
-saturation curve of the transformer core.
+\label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then constructed. It was noted that 
+I$_2$ short circuited the secondary windings 5-6. Thus the voltage supply knob was slowly adjusted until
+a secondary current of 0.4-A was obtained. The primary voltage, primary current, input power, and the 
+secondary current were measured. These values were recorded in Table~\ref{tab:short_circ}.
+The main power switch was set OFF and the voltage control knob fully CCW.
+
 
 \section{Results}
 \subsection{Transformer Performance}
@@ -169,6 +152,10 @@ saturation curve of the transformer core.
   \label{tab:short_circ}
 \end{table}
 
+\section{Analysis}
+\subsection{Transformer Voltage Regulation and Efficiency}
+\begin
+
 \section{Conclusions}
 
 By measuring the resistance of each transformer winding and not getting any
@@ -176,32 +163,10 @@ extremely high resistance readings similar to an open circuit, it was
 determined that the transformer windings had no faults and the integrity of the
 windings were intact.
 
-By measuring the voltage ratios for each particular transformer winding, the
-turns ratio for that winding was calculated by taking the primary voltage over
-the secondary voltage. This was one method to determine the turns ratio of an
-unspecified transformer.
+By measuring the transformer performance specifictions in Part 1, inital values
+for the voltage regulation and transformer efficiency were obtained to be able to
+compare to the same values for the equivalent circuit.
 
-By measuring the current ratio for one set of transformer windings, another
-method to determine the turns ratio was implemented. By referring to the text
-\emph{Electric Machinery Fundamentals}, the current ratio of a transformer is
-inversely proportional to the turns ratio. The relationship states:
-$\frac{I_p}{I_s} = \frac{N_s}{N_p}$, where I$_\text{p}$ is the primary current,
-I$_\text{s}$ the secondary current, N$_\text{p}$ the primary winding, and
-N$_\text{s}$ the secondary winding.  The ratio of secondary current I$_2$ over
-primary current I$_1$ was the same as the turns ratio calculated and recorded
-in row 2 of Table~\ref{tab:volt_rat} pertaining to winding number 5--6.
-Therefore, the additional method of determining a transformer turns ratio was
-verified.
-
-By analyzing the saturation curve, it was determined that the transformer core
-did indeed become saturated.  From an applied voltage of 10V to approximately
-110V, the saturation curve was linear and the transformer core was unsaturated
-at this time. A small increase in the magneto-motive force (represented as
-E$_3$) resulted in a very large increase in the flux produced (represented as
-E$_1$).  Then the saturation curve started to level off after an applied
-voltage of 110V (termed the \emph{knee} of the curve), and therefore the core
-started to become saturated. In the saturated region, increases in
-magneto-motive force produce smaller and smaller increases in flux.
 
 \pagebreak
 \section*{Circuits Tested}
