--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -153,8 +153,53 @@ The main power switch was set OFF and the voltage control knob fully CCW.
 \end{table}
 
 \section{Analysis}
-\subsection{Transformer Voltage Regulation and Efficiency}
-\begin
+\subsection{Transformer Equivalent Circuit Component Values}
+\begin{table}{H}
+  \centering
+  \begin{tabular}{*{4}{c}}
+    R$_C$ & X$_M$ & R$_EQ$ & X$_EQ$ & $\Omega$ \\
+    \hline
+    5.85k & 6.80k & 16.05 & 24.19 \\
+  \end{tabular}
+  \caption{Equivalent Transformer Components}
+  \label{tab:equiv_comp}
+\end{table}
+
+\subsection{Transformer Losses}
+\begin{table}{H}
+  \centering
+  \begin{tabular}{*{3}{c}}
+    Load $\Omega$ & Copper Losses P$_Cu$ W & Core Losses P$_Core$ W \\
+    \hline
+    \infty & 0.0014 & 2.453 \\
+    300 & 2.162 & 2.433 \\
+    300 + j300 & 0.956 & 2.441 \\
+    300 - j300 & 1.223 & 2.437 \\
+  \end{tabular}
+  \caption{Copper and Core Losses}
+  \label{tab:power_losses}
+\end{table}
+
+\subsection{Voltage Regulation VR and Efficiency \eta Comparison}
+\begin{table}{H}
+  \centering
+  \begin{tabular}{*{4}{c}}
+    Load $\Omega$ & VR Part 1 & Equiv. Circuit VR & Percent Difference \\
+    \hline
+    \infty & 0.00 & 0.00 & 0.00 \\
+    300 & 5.97 & 6.39 & 7.0 \\
+    300 + j300 & 6.16 & 6.69 & 8.6 \\
+    300 - j300 & -0.92 & -1.25 & 35.9 \\
+    \hline \hline
+    --- & \eta Part 1 & Equiv. Circuit \eta & --- \\
+    \infty & 0.00 & 0.00 & 0.00 \\
+    300 & 89.72 & 87.41 & 2.6 \\
+    300 + j300 & 85.57 & 86.02 & 0.5 \\
+    300 - j300 & 86.11 & 86.93 & 0.9 \\
+  \end{tabular}
+  \caption{Transformer Voltage Regulation and Efficiencies}
+  \label{tab:vr_eff}
+\end{table}
 
 \section{Conclusions}
 
@@ -163,9 +208,12 @@ extremely high resistance readings similar to an open circuit, it was
 determined that the transformer windings had no faults and the integrity of the
 windings were intact.
 
-By measuring the transformer performance specifictions in Part 1, inital values
-for the voltage regulation and transformer efficiency were obtained to be able to
-compare to the same values for the equivalent circuit.
+In Table~\ref{tab:equiv_comp} the circuit components of the transformer equivalent circuit are listed. These
+values were computed by using the voltage, current, and power values obtained from both the open-circuit
+test and short-circuit test. 
+
+In Table~\ref{tab:power_losses} the copper and core losses for each load are listed. The copper loss equation
+used was P$_Cu$ = I$_S$
 
 
 \pagebreak
