--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -54,7 +54,6 @@ in order to generate the equivalent circuit components. These results were then
 compared to the original performance specifications to show the transformer's
 non-ideal properties.
 
-\pagebreak
 \section{Procedure}
 
 \subsection{EMS Workstation Set-up}
@@ -69,10 +68,10 @@ I$_2$ were opened, set to continuous refresh.
 \subsection{Transformer Performance}
 
 \label{part1} With the main power switch set OFF and the voltage control knob
-fully CCW, the voltmeter selector switch was set to position 4-N. The circuit
+fully CCW, the voltmeter selector switch was set to position 4--N. The circuit
 represented by Figure~\ref{fig:circuit_01} was constructed with the secondary
 voltmeter E$_2$ open-circuited at first to simulate an infinite load.  The main
-power supply was set ON and the supply voltage was adjusted to 120-V. The
+power supply was turned on, and the supply voltage was adjusted to {120V}. The
 primary voltage E$_1$, primary current I$_1$, input power P$_1$, secondary
 voltage E$_2$, secondary current I$_2$, and output power P$_2$ were then
 measured for each of the four different loads listed in
@@ -82,7 +81,7 @@ knob was set fully CCW and the main power switch to OFF.
 \subsection{Open Circuit Test}
 
 \label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then constructed. The main power switch
-was set ON and the voltage control knob was adjusted to 120-V. The values of the primary voltage E$_1$, primary
+was set ON and the voltage control knob was adjusted to 120V. The values of the primary voltage E$_1$, primary
 current I$_1$, and input power P$_1$ were measured. These values were recorded in Table~\ref{tab:open_circ}.
 The main power switch was set OFF and the voltage control knob fully CCW.
 
@@ -90,11 +89,10 @@ The main power switch was set OFF and the voltage control knob fully CCW.
 
 \label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then constructed. It was noted that 
 I$_2$ short circuited the secondary windings 5-6. Thus the voltage supply knob was slowly adjusted until
-a secondary current of 0.4-A was obtained. The primary voltage, primary current, input power, and the 
+a secondary current of 0.4A was obtained. The primary voltage, primary current, input power, and the 
 secondary current were measured. These values were recorded in Table~\ref{tab:short_circ}.
 The main power switch was set OFF and the voltage control knob fully CCW.
 
-\pagebreak
 \section{Results}
 \subsection{Transformer Performance}
 \begin{table}[H]
@@ -158,13 +156,13 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \label{tab:short_circ}
 \end{table}
 
-\pagebreak
 \section{Analysis}
 \subsection{Transformer Equivalent Circuit Component Values}
-\begin{table}{H}
+\begin{table}[H]
   \centering
   \begin{tabular}{*{4}{c}}
-    R$_C$ & X$_M$ & R$_EQ$ & X$_EQ$ \\
+    \textbf{R$_C$} & \textbf{X$_M$} & \textbf{R$_{eq}$} & \textbf{X$_{eq}$} \\
+    $\Omega$ & $\Omega$ &$\Omega$ & $\Omega$ \\
     \hline
     5.85k & 6.80k & 16.05 & 24.19 \\
   \end{tabular}
@@ -173,10 +171,11 @@ The main power switch was set OFF and the voltage control knob fully CCW.
 \end{table}
 
 \subsection{Transformer Losses}
-\begin{table}{H}
+\begin{table}[H]
   \centering
   \begin{tabular}{*{3}{c}}
-    Load $\Omega$ & Copper Losses P$_Cu$ W & Core Losses P$_Core$ W \\
+    & \multicolumn{2}{c}{\textbf{Losses}} \\
+    \textbf{Load} $\Omega$ & \textbf{P$_\text{Cu}$} W & \textbf{P$_\text{core}$} W \\
     \hline
     $\infty$ & 0.0014 & 2.453 \\
     300 & 2.162 & 2.433 \\
@@ -187,28 +186,37 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \label{tab:power_losses}
 \end{table}
 
-\subsection{Voltage Regulation VR and Efficiency $\eta$ Comparison}
-\begin{table}{H}
+\subsection{Voltage Regulation and Efficiency Comparison}
+\begin{table}[H]
   \centering
   \begin{tabular}{*{4}{c}}
-    Load $\Omega$ & VR Part 1 & Equiv. Circuit VR & Percent Difference \\
+    \textbf{Load} $\Omega$ & \textbf{VR} & \textbf{VR} & \textbf{Percent} \\
+    & Part 1 & R$_\text{eq}$ & \textbf{Difference} \\
     \hline
     $\infty$ & 0.00 & 0.00 & 0.00 \\
     300 & 5.97 & 6.39 & 7.0 \\
     300 + j300 & 6.16 & 6.69 & 8.6 \\
     300 - j300 & -0.92 & -1.25 & 35.9 \\
-    \hline \hline
-    --- & $\eta$ Part 1 & Equiv. Circuit $\eta$ & --- \\
+  \end{tabular}
+  \caption{Transformer Voltage Regulation (VR)}
+  \label{tab:vr}
+\end{table}
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{*{4}{c}}
+    \textbf{Load} $\Omega$ & $\eta$ & $\eta$ & \textbf{Percent} \\
+    & Part 1 & R$_\text{eq}$ & \textbf{Difference} \\
+    \hline
     $\infty$ & 0.00 & 0.00 & 0.00 \\
     300 & 89.72 & 87.41 & 2.6 \\
     300 + j300 & 85.57 & 86.02 & 0.5 \\
     300 - j300 & 86.11 & 86.93 & 0.9 \\
   \end{tabular}
-  \caption{Transformer Voltage Regulation and Efficiencies}
-  \label{tab:vr_eff}
+  \caption{Transformer Efficiencies ($\eta$)}
+  \label{tab:eff}
 \end{table}
 
-\pagebreak
 \section{Conclusions}
 
 By measuring the resistance of each transformer winding and not getting any
@@ -224,9 +232,7 @@ In Table~\ref{tab:power_losses} the copper and core losses for each load are lis
 used was P$_Cu$ = I$_S$
 
 
-\pagebreak
 \section*{Circuits Tested}
-\subsection*{Transformer Performance}
 \begin{figure}[H]
   \centering
   \includegraphics[width=.8\textwidth]{img/circuit_01}
@@ -234,7 +240,6 @@ used was P$_Cu$ = I$_S$
   \label{fig:circuit_01}
 \end{figure}
 
-\subsection*{Open Circuit Test}
 \begin{figure}[H]
   \centering
   \includegraphics[width=.8\textwidth]{img/circuit_02}
@@ -242,7 +247,6 @@ used was P$_Cu$ = I$_S$
   \label{fig:circuit_02}
 \end{figure}
 
-\subsection*{Short Circuit Test}
 \begin{figure}[H]
   \centering
   \includegraphics[width=.8\textwidth]{img/circuit_03}
