--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % University/School Laboratory Report
 % LaTeX Template
 % Version 2.0 (4/12/12)
@@ -165,6 +165,10 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \label{tab:equiv_comp}
 \end{table}
 
+Equivalent cicuit components found from the following methods:
+the admittance Y$_E$ = \frac{I$_OC$}{V$_OC$}\angle{-\theta} = \frac{1}{R$_C$} - j\frac{1}{X$_M$}
+the series impedance Z$_SE$ = \frac{V$_SC$}{I$_SC$}\angle{\theta} = R$_EQ$ + jX$_EQ$
+
 \subsection{Transformer Losses}
 \begin{table}{H}
   \centering
@@ -180,6 +184,10 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \label{tab:power_losses}
 \end{table}
 
+Equations Used:
+P$_Cu$ = I$_S$^2*R$_EQ$
+P$_Core$ = (V$_P$/a)^2*1/R$_C$
+
 \subsection{Voltage Regulation VR and Efficiency \eta Comparison}
 \begin{table}{H}
   \centering
@@ -187,9 +195,9 @@ The main power switch was set OFF and the voltage control knob fully CCW.
     Load $\Omega$ & VR Part 1 & Equiv. Circuit VR & Percent Difference \\
     \hline
     \infty & 0.00 & 0.00 & 0.00 \\
-    300 & 5.97 & 6.39 & 7.0 \\
-    300 + j300 & 6.16 & 6.69 & 8.6 \\
-    300 - j300 & -0.92 & -1.25 & 35.9 \\
+    300 & 5.97 & 6.39 & 6.9 \\
+    300 + j300 & 6.16 & 6.69 & 8.2 \\
+    300 - j300 & -0.92 & -1.25 & 30.4 \\
     \hline \hline
     --- & \eta Part 1 & Equiv. Circuit \eta & --- \\
     \infty & 0.00 & 0.00 & 0.00 \\
@@ -201,19 +209,30 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \label{tab:vr_eff}
 \end{table}
 
+Equations Used:
+VR = \frac{V$_P$ - V$_S$}{V$_S} * 100\% ; V$_P$ = V$_S$ + R$_EQ$I$_S$ + jX$_EQ$I$_S$
+\eta = \frac{P$_OUT$}{P$_IN$} * 100\% = \frac{V$_S$I$_S$\cos\theta}{P$_Cu$ + P$_Core$ + V$_S$I$_S$\cos\theta}
+Percent Diff. = \frac{difference}{average} * 100\%
+
 \section{Conclusions}
 
-By measuring the resistance of each transformer winding and not getting any
-extremely high resistance readings similar to an open circuit, it was
-determined that the transformer windings had no faults and the integrity of the
-windings were intact.
+By measuring the resistance of each transformer winding and not getting any extremely high resistance readings
+similar to an open circuit, it was determined that the windings were intact and had integrity.
 
-In Table~\ref{tab:equiv_comp} the circuit components of the transformer equivalent circuit are listed. These
-values were computed by using the voltage, current, and power values obtained from both the open-circuit
-test and short-circuit test. 
+In Table~\ref{tab:equiv_circ}, the component values for the transformer equivalent circuit are listed. These
+values were needed to accurately model the equivalent circuit due to the imperfections in real transformers. The
+resistance R$_EQ$ was made up of R$_P$ + R$_S$. R$_P$ was a resistance in the primary circuit that represented the 
+resistive losses in the primary windings of the transformer core. Similarly, R$_S$ was a resistance in the secondary
+circuit that represented the resistive losses in the secondary windings of the transformer core. The reactance X$_EQ$
+was made up of X$_P$ + X$_S$. These reactances represented the leakage inductances of the primary and secondary coils.
+The core excitation losses were modeled with a resistance R$_C$ in parallel with a reactance X$_M$. 
 
-In Table~\ref{tab:power_losses} the copper and core losses for each load are listed. The copper loss equation
-used was P$_Cu$ = I$_S$
+In Table~\ref{tab:power_losses} the copper and core excitation losses for each load are listed. These losses were
+accounted for by the component values for the equivalent circuit found in Table~\ref{tab:equiv_circ}.
+
+In Table~\ref{tab:vr_eff}, the transformer voltage regulation and efficiencies for the transformer modeled in Part 1
+and the equivalent circuit are compared. On average small percent differences were obtained, thus the equivalent 
+circuit constructed was an accurate model of the transformer in Part 1.
 
 
 \pagebreak
