--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -1,23 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% University/School Laboratory Report
-% LaTeX Template
-% Version 2.0 (4/12/12)
-%
-% This template has been downloaded from:
-% http://www.latextemplates.com
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-% Original header:
-%
-% This is a LaTeX version of the sample laboratory report
-% from Virginia Tech's copyrighted 08-09 CHEM 1045/1046 lab manual.
-% Reproduction of this one appendix section for academic purposes
-% should fall under fair use.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{float}
@@ -67,7 +47,7 @@ I$_2$ were opened, set to continuous refresh.
 
 \subsection{Transformer Performance}
 
-\label{part1} With the main power switch set OFF and the voltage control knob
+\label{part1} With the main power switch set off And the voltage control knob
 fully CCW, the voltmeter selector switch was set to position 4--N. The circuit
 represented by Figure~\ref{fig:circuit_01} was constructed with the secondary
 voltmeter E$_2$ open-circuited at first to simulate an infinite load.  The main
@@ -75,23 +55,23 @@ power supply was turned on, and the supply voltage was adjusted to {120V}. The
 primary voltage E$_1$, primary current I$_1$, input power P$_1$, secondary
 voltage E$_2$, secondary current I$_2$, and output power P$_2$ were then
 measured for each of the four different loads listed in
-Table~\ref{tab:voltage_rat}.  Prior to changing each load, the voltage supply
-knob was set fully CCW and the main power switch to OFF.
+Table~\ref{tab:volt_rat}.  Prior to changing each load, the voltage supply
+knob was set fully CCW and the main power switch to off.
 
 \subsection{Open Circuit Test}
 
 \label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then constructed. The main power switch
-was set ON and the voltage control knob was adjusted to 120V. The values of the primary voltage E$_1$, primary
+was set on And the voltage control knob was adjusted to 120V. The values of the primary voltage E$_1$, primary
 current I$_1$, and input power P$_1$ were measured. These values were recorded in Table~\ref{tab:open_circ}.
-The main power switch was set OFF and the voltage control knob fully CCW.
+The main power switch was set off And the voltage control knob fully CCW.
 
 \subsection{Short Circuit Test}
 
-\label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then constructed. It was noted that 
+\label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then constructed. It was noted that
 I$_2$ short circuited the secondary windings 5-6. Thus the voltage supply knob was slowly adjusted until
-a secondary current of 0.4A was obtained. The primary voltage, primary current, input power, and the 
+a secondary current of 0.4A was obtained. The primary voltage, primary current, input power, and the
 secondary current were measured. These values were recorded in Table~\ref{tab:short_circ}.
-The main power switch was set OFF and the voltage control knob fully CCW.
+The main power switch was set off And the voltage control knob fully CCW.
 
 \section{Results}
 \subsection{Transformer Performance}
@@ -161,7 +141,8 @@ The main power switch was set OFF and the voltage control knob fully CCW.
 \begin{table}[H]
   \centering
   \begin{tabular}{*{4}{c}}
-    \textbf{R$_C$} & \textbf{X$_M$} & \textbf{R$_{eq}$} & \textbf{X$_{eq}$} \\
+    \textbf{R$_\text{C}$} & \textbf{X$_\text{M}$}
+    & \textbf{R$_{\text{eq}}$} & \textbf{X$_{\text{eq}}$} \\
     $\Omega$ & $\Omega$ &$\Omega$ & $\Omega$ \\
     \hline
     5.85k & 6.80k & 16.05 & 24.19 \\
@@ -226,10 +207,10 @@ windings were intact.
 
 In Table~\ref{tab:equiv_comp} the circuit components of the transformer equivalent circuit are listed. These
 values were computed by using the voltage, current, and power values obtained from both the open-circuit
-test and short-circuit test. 
+test and short-circuit test.
 
 In Table~\ref{tab:power_losses} the copper and core losses for each load are listed. The copper loss equation
-used was P$_Cu$ = I$_S$
+used was $\text{P}_\text{Cu} = \text{I}_\text{S}$
 
 
 \section*{Circuits Tested}
