Fixing more mistakes.

--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -43,27 +43,27 @@ resistance of the transformer windings. These values are recorded in
 Table~\ref{tab:wind_res}.  The DAI 24V supply was turned on, and the DAI USB
 connector was connected between the EMS workstation and the {PC}. On the LVDAM
 EMS application software, the metering windows for E$_1$, E$_2$, I$_1$, and
-I$_2$ were opened, set to continuous refresh.
+I$_2$ were opened and set to continuous refresh.
 
 \subsection{Transformer Performance}
 
-\label{part1} With the main power switch set off and the voltage control knob
-fully CCW, the voltmeter selector switch was set to position 4--N. The circuit
-represented by Figure~\ref{fig:circuit_01} was constructed with the secondary
-voltmeter E$_2$ open-circuited at first to simulate an infinite load.  The main
-power supply was turned on, and the supply voltage was adjusted to {120V}. The
-primary voltage E$_1$, primary current I$_1$, input power P$_1$, secondary
-voltage E$_2$, secondary current I$_2$, and output power P$_2$ were then
-measured for each of the four different loads listed in
-Table~\ref{tab:volt_rat}.  Prior to changing each load, the voltage supply
-knob was set fully CCW and the main power switch to off.
+\label{part1} With the main power switch turned off and the voltage control
+knob fully counter-clockwise, the voltmeter selector switch was set to position
+4--N. The circuit represented by Figure~\ref{fig:circuit_01} was constructed
+with the secondary voltmeter E$_2$ open-circuited at first to simulate an
+infinite load.  The main power supply was turned on, and the supply voltage was
+adjusted to 120V. The primary voltage, primary current, input power, secondary
+voltage, secondary current, and output power were then measured for each of the
+four loads listed in Table~\ref{tab:volt_rat}.  Prior to changing each load,
+the voltage supply knob was set fully counter-clockwise and the main power
+switch set to off.
 
 \subsection{Open Circuit Test}
 
 \label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then constructed. The main power switch
 was turned on and the voltage control knob was adjusted to 120V. The values of the primary voltage E$_1$, primary
 current I$_1$, and input power P$_1$ were measured. These values were recorded in Table~\ref{tab:open_circ}.
-The main power switch was turned off and the voltage control knob fully CCW.
+The main power switch was turned off and the voltage control knob fully counter-clockwise.
 
 \subsection{Short Circuit Test}
 
@@ -71,7 +71,7 @@ The main power switch was turned off and the voltage control knob fully CCW.
 I$_2$ short circuited the secondary windings 5-6. Thus the voltage supply knob was slowly adjusted until
 a secondary current of 0.4A was obtained. The primary voltage, primary current, input power, and the
 secondary current were measured. These values were recorded in Table~\ref{tab:short_circ}.
-The main power switch was turned off and the voltage control knob fully CCW.
+The main power switch was turned off and the voltage control knob fully counter-clockwise.
 
 \section{Results}
 \subsection{Transformer Performance}
@@ -151,7 +151,7 @@ The main power switch was turned off and the voltage control knob fully CCW.
   \label{tab:equiv_comp}
 \end{table}
 
-Equivalent cicuit components found from the following methods:
+Equivalent circuit components found from the following methods:
 the admittance $Y_E = \frac{I_{OC}}{V_{OC}}\angle{-\theta} = \frac{1}{R_C} -
 j\frac{1}{X_M}$
 the series impedance $Z_{SE} = \frac{V_{SC}}{I_{SC}}\angle{\theta} = R_eq + jX_eq$
